--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - ./keys:/root/.ssh/
     command: [bundle, exec, puma]
     stop_signal: SIGINT
+    stdin_open: true
+    tty: true
   database:
     image: postgres
     volumes:
@@ -40,4 +42,3 @@ services:
 volumes:
   chato-web-sync:
     external: true
-
